speculaas/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: speculaas-ingress
  namespace: speculaas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - speculaas.do.houseofmoran.io
        - speculaas.houseofmoran.com
      secretName: letsencrypt-prod
  rules:
    - host: speculaas.do.houseofmoran.io
      http: &http
        paths:
          - path: /
            backend:
              serviceName: pieces-view-service
              servicePort: 80
          - path: /graphql
            backend:
              serviceName: pieces-finder-service
              servicePort: 80
    - host: speculaas.houseofmoran.com
      http: *http
